--- a/_config.yml
+++ b/_config.yml
@@ -141,7 +141,7 @@ comments:
     app_key     : UyaUnb5QIfMA5bN8PWh7nQ1V
     placeholder : Leave Your Opinion
     visitor     : A Friend
-    meta        : # "[nick, mail, link]" (default) nickname, E-mail, Personal-site
+    meta        : [A Friend,123,123]
 
 
 ## => Pageview
