--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: ESCAPE FROM THE MISERY
 
 ## => Language and Timezone
 ##############################
-lang: # the language of your site, default as "en"
+lang: zh # the language of your site, default as "en"
 timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
 
 
