--- a/_config.yml
+++ b/_config.yml
@@ -213,6 +213,11 @@ defaults:
       show_edit_on_github: true
       show_subscribe: true
       pageview: true
+ - scope:
+      path: "_docs/en"
+      values:
+      layout: article
+      nav_key: docs
 
 
 ## => Plugins
