--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,3 +32,9 @@ header:
       ko      : &KO       소개
       ko-KR   : *KO
     url: /about.html
+    
+    
+  - titles:
+      en      : &EN       Links
+      zh-Hans : &ZH_HANS  友人帐
+    url: /links.md
